Add header, pictures, and links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <img src="img/lambda-black.png">
+           <button> <a href="#">Home</a></button>
+           <button><a href="#">About</a></button>
+           <button><a href="#">Products</a></button>
+           <button><a href="#">Blog</a></button>
+           <button><a href="#">Contact</a></button>
+        </nav>
+    </header>
     <div class="container">
+        <div class="Big-picture">
+            <img src="img/jumbo.jpg">
+        </div>
    
         <section class="top-content">
             <div class="text-container">
