added picture and navigation link to about section

--- a/about.html
+++ b/about.html
@@ -12,6 +12,20 @@
 </head>
 
 <body>
+<header>
+  <nav>
+    <img src="img/lambda-black.png">
+   <button> <a href="file:///C:/Users/diamo/OneDrive/Desktop/Web30/Sprint-Challenge--User-Interface/index.html">Home</a></button>
+   <button><a href="#">About</a></button>
+   <button><a href="#">Products</a></button>
+   <button><a href="#">Blog</a></button>
+   <button><a href="#">Contact</a></button>
+</nav>
+</header>
+  <div class="big-picture">
+          <img src="img/jumbo-about.png">
+  </div>
+          
     <div class="container about-page">
      
     About
