added borders, aligned pictures

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <img src="img/lambda-black.png">
            <button> <a href="#">Home</a></button>
-           <button><a href="file:///C:/Users/diamo/OneDrive/Desktop/Web30/Sprint-Challenge--User-Interface/about.html">About</a></button>
+           <button><a href="/about.html">About</a></button>
            <button><a href="#">Products</a></button>
            <button><a href="#">Blog</a></button>
            <button><a href="#">Contact</a></button>
