--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
     <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
 
-    <a href="#">Learn More</a>
+    <button class="learnmore"><a href="#">Learn More</a></button>
  </section>
 
 <section class="how">
@@ -59,7 +59,7 @@
     
    <p> Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
-    <a href="#">Learn More</a>
+    <button class="learnmore"><a href="#">Learn More</a></button>
 </section>
 
 <section class="places">
@@ -72,7 +72,7 @@
 
     <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
       </p>
-    <a href="#">Learn More</a>
+    <button class="learnmore"><a href="#">Learn More</a></button>
 </section>
 
 <section class="collaboration">
@@ -84,7 +84,7 @@
     
     <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
-    <a href="#">Learn More</a>
+    <button class="learnmore"><a href="#">Learn More</a></button>
     </section>
     </div>
 
